@@ -6,6 +6,7 @@
 config EXAMPLES_CDCACM
 	bool "CDC/ACM example"
 	default n
+	depends on CDCACM
 	---help---
 		Enable the USB CDC/ACM class driver example
 
